Improve .env.example with setup guidance and placeholders
Added helpful comments throughout the .env.example file to clarify how each environment variable is used. Also included placeholders for API keys and other important variables to guide users through the setup process.

--- a/.env.example
+++ b/.env.example
@@ -17,13 +17,13 @@ APP_ENV=local
 # Must be 32 characters long exactly.
 # Use `php artisan key:generate` or
 #`echo -n 'base64:'; openssl rand -base64 32` to generate a random key.
-APP_KEY=
+APP_KEY=your32characterlongsecurekey  # Replace with your 32-character app key
 
 # true if you want to show debug information on errors, or if you need to debug
 # locally. For production, put this to false.
 APP_DEBUG=true
 
-# The URL of your application.
+# The URL of your application. Change this to your production URL in production.
 APP_URL=http://localhost:8000
 
 # Database to store information
@@ -88,10 +88,11 @@ MAIL_REPLY_TO_NAME="${APP_NAME}"
 # search in Monica. Searching requires a queue to be configured.
 SCOUT_DRIVER=database
 SCOUT_QUEUE=true
-MEILISEARCH_HOST=
-MEILISEARCH_KEY=
+MEILISEARCH_HOST= # Example: https://localhost:7700
+MEILISEARCH_KEY=your_meilisearch_key_here  # Replace with your Meilisearch API key
 
 # Notification channels
+# Replace TELEGRAM_BOT_TOKEN with your bot token if you want to use Telegram notifications
 TELEGRAM_BOT_TOKEN=
 TELEGRAM_BOT_URL=
 TELEGRAM_BOT_WEBHOOK_URL=
@@ -105,20 +106,20 @@ DEFAULT_STORAGE_LIMIT=50
 # generated files.
 # Uploadcare is GDPR and all privacy laws compliant.
 # It also provides a generous free plan.
-UPLOADCARE_PUBLIC_KEY=
-UPLOADCARE_PRIVATE_KEY=
+UPLOADCARE_PUBLIC_KEY=your_uploadcare_public_key_here
+UPLOADCARE_PRIVATE_KEY=your_uploadcare_private_key_here
 
 # API key for geolocation services
 # We use LocationIQ (https://locationiq.com/) to translate addresses to
 # latitude/longitude coordinates. We could use Google instead but we don't
 # want to give anything to Google, ever.
 # LocationIQ offers 10,000 free requests per day.
-LOCATION_IQ_API_KEY=
+LOCATION_IQ_API_KEY=your_locationiq_api_key_here
 
 # API key for maps displays
 # We use Mapbox (https://mapbox.com/) to display static maps.
 # Mapbox has a generous 50 000 free requests per month.
 # A username is also required, this is the one used upon account creation.
-MAPBOX_API_KEY=
-MAPBOX_USERNAME=
+MAPBOX_API_KEY=your_mapbox_api_key_here
+MAPBOX_USERNAME=your_mapbox_username
 MAPBOX_CUSTOM_STYLE_NAME=
