--- a/.env.example
+++ b/.env.example
@@ -84,16 +84,18 @@ MAIL_REPLY_TO_NAME="${APP_NAME}"
 # Search
 ## We use Laravel Scout to do full-text search.
 ## Read config/scout.php for more information.
-## Note that you have to use: 'meilisearch', 'typesense', 'algolia' or the 'database' driver
-## to enable search in Monica. Searching requires a queue to be configured.
+## Note that you have to use: 'meilisearch', 'typesense', 'algolia' or the 'database'
+## driver to enable search in Monica. Searching requires a queue to be configured.
 SCOUT_DRIVER=database
 SCOUT_QUEUE=true
 ## If you never intend to use the 'database' driver, you can set this value to false:
 FULL_TEXT_INDEX=true
-MEILISEARCH_HOST=
+## Meilisearch settings
+MEILISEARCH_URL=
 MEILISEARCH_KEY=
-TYPESENSE_API_KEY=
+## Typesense settings
 TYPESENSE_HOST=
+TYPESENSE_API_KEY=
 
 # Notification channels
 TELEGRAM_BOT_TOKEN=
