--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,11 +1,13 @@
 {
   "name": "PHP & SQLite",
-  "workspaceFolder": "/workspace",
   "image": "ghcr.io/asbiin/devcontainers/php:8.2",
   
   // For use with PHP or Apache (e.g.php -S localhost:8080 or apache2ctl start)
   "forwardPorts": [8080],
-
+  "features": {
+    "ghcr.io/devcontainers/features/github-cli:1": {}
+  },
+  
   // Use 'postCreateCommand' to run commands after the container is created.
   "postCreateCommand": ".devcontainer/postCreate.sh",
   "postStartCommand": ".devcontainer/postStart.sh"
