test: test sonarcloud action

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,7 +21,7 @@ permissions:
 jobs:
   tests:
     name: Run tests
-    uses: monicahq/workflows/.github/workflows/laravel.yml@v2
+    uses: monicahq/workflows/.github/workflows/laravel.yml@sonarcloud-action
     with:
       php-versions: "['8.3', '8.4']"
       connections: "['sqlite', 'mysql', 'pgsql']"
