--- a/package.json
+++ b/package.json
@@ -59,5 +59,9 @@
       "vendor/bin/pint"
     ]
   },
-  "packageManager": "yarn@4.6.0"
+  "packageManager": "yarn@4.6.0",
+  "dependencies": {
+    "tributejs": "^5.1.3",
+    "vue-tribute": "^2.0.0"
+  }
 }
