--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "laravel-vue-i18n": "^2.7.8",
     "lint-staged": "^15.4.3",
     "lodash": "^4.17.21",
+    "lucide-vue-next": "^0.475.0",
     "mitt": "^3.0.1",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
