--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
     "socialiteproviders/facebook": "^4.1",
     "socialiteproviders/github": "^4.1",
     "socialiteproviders/google": "^4.1",
+    "socialiteproviders/keycloak": "^5.3",
     "socialiteproviders/linkedin": "^5.0",
     "socialiteproviders/microsoft-azure": "^5.1",
     "stevebauman/location": "^7.0",
