build: activate Inertia SSR (#7650)

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && vite build --ssr",
     "preview": "vite preview",
     "lint": "eslint *.js resources",
     "format": "prettier --write '**/*.{js,vue,css,scss,json,yml,md}'",
@@ -22,6 +22,7 @@
     "@tailwindcss/vite": "^4.0.11",
     "@vitejs/plugin-basic-ssl": "^1.2.0",
     "@vitejs/plugin-vue": "^5.2.1",
+    "@vue/server-renderer": "^3.5.13",
     "ant-design-vue": "^4.2.6",
     "axios": "^1.8.1",
     "charts.css": "^1.1.0",
