--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
   "devDependencies": {
     "@inertiajs/vue3": "^2.0.4",
     "@popperjs/core": "^2.11.8",
-    "@sentry/tracing": "^7.120.3",
-    "@sentry/vue": "^8.55.0",
+    "@sentry/browser": "^9.13.0",
+    "@sentry/vite-plugin": "^3.3.1",
+    "@sentry/vue": "^9.13.0",
     "@simplewebauthn/browser": "^13.1.0",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/vite": "^4.0.11",
