--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
   "devDependencies": {
     "@inertiajs/vue3": "^2.0.4",
     "@popperjs/core": "^2.11.8",
-    "@sentry/tracing": "^7.120.3",
-    "@sentry/vue": "^8.55.0",
+    "@sentry/browser": "^9.13.0",
+    "@sentry/vite-plugin": "^3.3.1",
+    "@sentry/vue": "^9.13.0",
     "@simplewebauthn/browser": "^13.1.0",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/vite": "^4.0.11",
@@ -29,6 +30,7 @@
     "eslint": "^9.21.0",
     "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-vue": "^9.33.0",
+    "globals": "^16.0.0",
     "husky": "^9.1.7",
     "laravel-vite-plugin": "^1.2.0",
     "laravel-vue-i18n": "^2.7.8",
