--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,12 +6,16 @@
     "vscode": {
       "extensions": [
         "dbaeumer.vscode-eslint",
+        "xdebug.php-debug",
         "bmewburn.vscode-intelephense-client",
+        "xdebug.php-pack",
+        "devsense.phptools-vscode",
         "mikestead.dotenv",
         "editorconfig.editorconfig",
         "esbenp.prettier-vscode",
         "bradlc.vscode-tailwindcss",
-        "vue.volar"
+        "vue.volar",
+        "qwtel.sqlite-viewer"
       ]
     }
   },
@@ -19,6 +23,7 @@
   // For use with PHP or Apache (e.g.php -S localhost:8080 or apache2ctl start)
   "forwardPorts": [8080],
   "features": {
+    "ghcr.io/devcontainers/features/common-utils:2": {},
     "ghcr.io/devcontainers/features/github-cli:1": {}
   },
 
@@ -27,7 +32,7 @@
   "postStartCommand": ".devcontainer/postStart.sh",
 
   // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-  "remoteUser": "root",
+  // "remoteUser": "root",
 
   "mounts": [
     "source=${localEnv:HOME}${localEnv:USERPROFILE}/.ssh,target=/home/vscode/.ssh,type=bind,consistency=cached"
