--- a/package.json
+++ b/package.json
@@ -13,41 +13,42 @@
     "docker:run": "docker run --name monica -p 8080:80 monica-next"
   },
   "devDependencies": {
-    "@inertiajs/vue3": "^2.0.4",
+    "@inertiajs/vue3": "^2.0.8",
     "@popperjs/core": "^2.11.8",
-    "@sentry/browser": "^9.13.0",
-    "@sentry/vite-plugin": "^3.3.1",
-    "@sentry/vue": "^9.13.0",
+    "@sentry/browser": "^9.15.0",
+    "@sentry/vite-plugin": "^3.4.0",
+    "@sentry/vue": "^9.15.0",
     "@simplewebauthn/browser": "^13.1.0",
     "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/vite": "^4.0.11",
-    "@vitejs/plugin-basic-ssl": "^1.2.0",
-    "@vitejs/plugin-vue": "^5.2.1",
+    "@tailwindcss/vite": "^4.1.5",
+    "@vitejs/plugin-basic-ssl": "^2.0.0",
+    "@vitejs/plugin-vue": "^5.2.3",
     "@vue/server-renderer": "^3.5.13",
     "ant-design-vue": "^4.2.6",
-    "axios": "^1.8.1",
+    "axios": "^1.9.0",
     "charts.css": "^1.1.0",
-    "eslint": "^9.21.0",
-    "eslint-config-prettier": "^10.0.2",
-    "eslint-plugin-vue": "^9.33.0",
+    "eslint": "^9.26.0",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-vue": "^10.1.0",
     "globals": "^16.0.0",
     "husky": "^9.1.7",
     "laravel-vite-plugin": "^1.2.0",
-    "laravel-vue-i18n": "^2.7.8",
-    "lint-staged": "^15.4.3",
+    "laravel-vue-i18n": "^2.8.0",
+    "lint-staged": "^15.5.2",
     "lodash": "^4.17.21",
-    "lucide-vue-next": "^0.477.0",
+    "lucide-vue-next": "^0.507.0",
     "mitt": "^3.0.1",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "sass": "^1.85.1",
-    "tailwindcss": "^4.0.11",
+    "sass": "^1.87.0",
+    "tailwindcss": "^4.1.5",
     "tiny-emitter": "^2.1.0",
     "uploadcare-vue": "^1.0.0",
     "v-calendar": "^3.1.2",
-    "vite": "^6.2.0",
+    "vite": "^6.3.5",
     "vue": "^3.5.13",
     "vue-clipboard3": "^2.0.0",
+    "vue-eslint-parser": "^10.1.3",
     "vuedraggable": "^4.1.0",
     "ziggy-js": "2.5.2"
   },
