--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,7 @@
     "socialiteproviders/github": "^4.1",
     "socialiteproviders/google": "^4.1",
     "socialiteproviders/kanidm": "^5.0",
+    "socialiteproviders/authentik": "^5.0",
     "socialiteproviders/keycloak": "^5.3",
     "socialiteproviders/linkedin": "^5.0",
     "socialiteproviders/microsoft-azure": "^5.1",
